Fix hidden overflow

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
   background: var(--main-bg);
   outline: 5px solid rgb(19, 19, 19);
   position: relative;
+  overflow-y: hidden;
 }
 
 h1 {
@@ -535,6 +536,15 @@ div img {
 
   a span {
     color: black;
+  }
+
+  input[type=text]#playerX,
+  input[type=text]#playerO {
+    outline: none;
+    -webkit-appearance: none;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
   }
 }
 
